code/java/PAEngine/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# PA Engine client library for Java

[![API Version](https://img.shields.io/badge/api-v3.23.0-blue)](https://developer.factset.com/api-catalog/pa-engine-api)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/paengine/4.0.0)](https://central.sonatype.com/artifact/com.factset.sdk/paengine/4.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.23.0
- SDK version: 4.0.0
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.protobuf</groupId>
  <artifactId>stachextensions</artifactId>
  <version>1.3.2</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>paengine</artifactId>
  <version>4.0.0</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.protobuf:stachextensions:1.3.2"
    implementation "com.factset.sdk:paengine:4.0.0"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.PAEngine.*;
import com.factset.sdk.PAEngine.auth.*;
import com.factset.sdk.PAEngine.models.*;
import com.factset.sdk.PAEngine.api.AccountsApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class AccountsApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        AccountsApi apiInstance = new AccountsApi(defaultClient);
        String path = "Client:"; // String | The directory to get the accounts and sub-directories.
        try {
            AccountDirectoriesRoot result = apiInstance.getAccounts(path);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling AccountsApi#getAccounts");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.PAEngine.*;
import com.factset.sdk.PAEngine.api.AccountsApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

AccountsApi apiInstance = new AccountsApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.PAEngine.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## STACH extensions

Some methods within this client library are able to return STACH formatted data. Please see the documentation of those endpoints on how to enable and use STACH formatted data.

Documentation of the STACH extension can be found here: [stach-extensions](https://github.com/factset/stach-extensions) and here [STACH schema](https://factset.github.io/stachschema)

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*CalendarApi* | [**getPACalendars**](docs/CalendarApi.md#getPACalendars) | **GET** /analytics/engines/pa/v3/calendars | Get PA calendars
*ColumnStatisticsApi* | [**getPAColumnStatistics**](docs/ColumnStatisticsApi.md#getPAColumnStatistics) | **GET** /analytics/engines/pa/v3/columnstatistics | Get PA column statistics
*ColumnsApi* | [**getPAColumnById**](docs/ColumnsApi.md#getPAColumnById) | **GET** /analytics/engines/pa/v3/columns/{id} | Get PA column settings
*ColumnsApi* | [**getPAColumns**](docs/ColumnsApi.md#getPAColumns) | **GET** /analytics/engines/pa/v3/columns | Get PA columns
*ComponentsApi* | [**getPAComponentById**](docs/ComponentsApi.md#getPAComponentById) | **GET** /analytics/engines/pa/v3/components/{id} | Get PA component by id
*ComponentsApi* | [**getPAComponents**](docs/ComponentsApi.md#getPAComponents) | **GET** /analytics/engines/pa/v3/components | Get PA components
*ConfigurationsApi* | [**getPACommentaryConfigurations**](docs/ConfigurationsApi.md#getPACommentaryConfigurations) | **GET** /analytics/engines/pa/v3/commentary/configurations | Get PA commentary configurations in a directory
*CurrenciesApi* | [**getCurrencies**](docs/CurrenciesApi.md#getCurrencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*DatesApi* | [**convertPADatesToAbsoluteFormat**](docs/DatesApi.md#convertPADatesToAbsoluteFormat) | **GET** /analytics/engines/pa/v3/dates | Convert PA dates to absolute format
*DocumentsApi* | [**getPA3Documents**](docs/DocumentsApi.md#getPA3Documents) | **GET** /analytics/engines/pa/v3/documents/{path} | Get PA3 documents and sub-directories in a directory
*FrequenciesApi* | [**getPAFrequencies**](docs/FrequenciesApi.md#getPAFrequencies) | **GET** /analytics/engines/pa/v3/frequencies | Get PA frequencies
*GroupsApi* | [**getPAGroupingFrequencies**](docs/GroupsApi.md#getPAGroupingFrequencies) | **GET** /analytics/engines/pa/v3/grouping-frequencies | Get PA grouping frequencies
*GroupsApi* | [**getPAGroups**](docs/GroupsApi.md#getPAGroups) | **GET** /analytics/engines/pa/v3/groups | Get PA groups
*LinkedPaTemplatesApi* | [**createLinkedPATemplates**](docs/LinkedPaTemplatesApi.md#createLinkedPATemplates) | **POST** /analytics/engines/pa/v3/linked-templates | Create a linked PA template
*LinkedPaTemplatesApi* | [**deleteLinkedPATemplates**](docs/LinkedPaTemplatesApi.md#deleteLinkedPATemplates) | **DELETE** /analytics/engines/pa/v3/linked-templates/{id} | Delete a linked PA template.
*LinkedPaTemplatesApi* | [**getLinkedPATemplates**](docs/LinkedPaTemplatesApi.md#getLinkedPATemplates) | **GET** /analytics/engines/pa/v3/linked-templates | Get linked PA templates
*LinkedPaTemplatesApi* | [**getLinkedPATemplatesById**](docs/LinkedPaTemplatesApi.md#getLinkedPATemplatesById) | **GET** /analytics/engines/pa/v3/linked-templates/{id} | Get linked PA template by id
*LinkedPaTemplatesApi* | [**updateLinkedPATemplates**](docs/LinkedPaTemplatesApi.md#updateLinkedPATemplates) | **PUT** /analytics/engines/pa/v3/linked-templates/{id} | Update a linked PA template
*PaCalculationsApi* | [**cancelCalculationById**](docs/PaCalculationsApi.md#cancelCalculationById) | **DELETE** /analytics/engines/pa/v3/calculations/{id} | Cancel PA calculation by id
*PaCalculationsApi* | [**generatePAPortfolioCommentary**](docs/PaCalculationsApi.md#generatePAPortfolioCommentary) | **POST** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/commentary | Generate PA portfolio commentary by calculation and unit id.
*PaCalculationsApi* | [**getAllCalculations**](docs/PaCalculationsApi.md#getAllCalculations) | **GET** /analytics/engines/pa/v3/calculations | Get all calculations
*PaCalculationsApi* | [**getCalculationParameters**](docs/PaCalculationsApi.md#getCalculationParameters) | **GET** /analytics/engines/pa/v3/calculations/{id} | Get PA calculation parameters by id
*PaCalculationsApi* | [**getCalculationStatusById**](docs/PaCalculationsApi.md#getCalculationStatusById) | **GET** /analytics/engines/pa/v3/calculations/{id}/status | Get PA calculation status by id
*PaCalculationsApi* | [**getCalculationUnitResultById**](docs/PaCalculationsApi.md#getCalculationUnitResultById) | **GET** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/result | Get PA calculation result by id
*PaCalculationsApi* | [**getPAPortfolioCommentaryResultById**](docs/PaCalculationsApi.md#getPAPortfolioCommentaryResultById) | **GET** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/commentary/result | Get PA Portfolio commentary result by calculation and unit id.
*PaCalculationsApi* | [**getPAPortfolioCommentaryStatusById**](docs/PaCalculationsApi.md#getPAPortfolioCommentaryStatusById) | **GET** /analytics/engines/pa/v3/calculations/{id}/units/{unitId}/commentary/status | Get PA portfolio commentary status by calculation and unit id.
*PaCalculationsApi* | [**postAndCalculate**](docs/PaCalculationsApi.md#postAndCalculate) | **POST** /analytics/engines/pa/v3/calculations | Create and Run PA calculation
*PaCalculationsApi* | [**putAndCalculate**](docs/PaCalculationsApi.md#putAndCalculate) | **PUT** /analytics/engines/pa/v3/calculations/{id} | Create or Update PA calculation and run it.
*PricingSourcesApi* | [**getPAPricingSources**](docs/PricingSourcesApi.md#getPAPricingSources) | **GET** /analytics/engines/pa/v3/pricing-sources | Get PA pricing sources
*TemplatedPaComponentsApi* | [**createTemplatedPAComponents**](docs/TemplatedPaComponentsApi.md#createTemplatedPAComponents) | **POST** /analytics/engines/pa/v3/templated-components | Create templated PA component
*TemplatedPaComponentsApi* | [**deleteTemplatedPAComponents**](docs/TemplatedPaComponentsApi.md#deleteTemplatedPAComponents) | **DELETE** /analytics/engines/pa/v3/templated-components/{id} | Delete templated PA component
*TemplatedPaComponentsApi* | [**getTemplatedPAComponentById**](docs/TemplatedPaComponentsApi.md#getTemplatedPAComponentById) | **GET** /analytics/engines/pa/v3/templated-components/{id} | Get templated PA component by id
*TemplatedPaComponentsApi* | [**getTemplatedPAComponentsInPath**](docs/TemplatedPaComponentsApi.md#getTemplatedPAComponentsInPath) | **GET** /analytics/engines/pa/v3/templated-components | Get templated PA components in path
*TemplatedPaComponentsApi* | [**updateTemplatedPAComponents**](docs/TemplatedPaComponentsApi.md#updateTemplatedPAComponents) | **PUT** /analytics/engines/pa/v3/templated-components/{id} | Update templated PA component
*UnlinkedPaTemplatesApi* | [**createUnlinkedPATemplates**](docs/UnlinkedPaTemplatesApi.md#createUnlinkedPATemplates) | **POST** /analytics/engines/pa/v3/unlinked-templates | Create unlinked PA template
*UnlinkedPaTemplatesApi* | [**deleteUnlinkedPATemplates**](docs/UnlinkedPaTemplatesApi.md#deleteUnlinkedPATemplates) | **DELETE** /analytics/engines/pa/v3/unlinked-templates/{id} | Delete unlinked PA template
*UnlinkedPaTemplatesApi* | [**getDefaultUnlinkedPATemplateTypes**](docs/UnlinkedPaTemplatesApi.md#getDefaultUnlinkedPATemplateTypes) | **GET** /analytics/engines/pa/v3/unlinked-templates/template-types | Get default unlinked PA template types.
*UnlinkedPaTemplatesApi* | [**getDetailsType**](docs/UnlinkedPaTemplatesApi.md#getDetailsType) | **GET** /analytics/engines/pa/v3/unlinked-templates/template-types/{id} | Get unlinked PA template type details by id.
*UnlinkedPaTemplatesApi* | [**getUnlinkedPATemplates**](docs/UnlinkedPaTemplatesApi.md#getUnlinkedPATemplates) | **GET** /analytics/engines/pa/v3/unlinked-templates | Get unlinked PA templates
*UnlinkedPaTemplatesApi* | [**getUnlinkedPATemplatesById**](docs/UnlinkedPaTemplatesApi.md#getUnlinkedPATemplatesById) | **GET** /analytics/engines/pa/v3/unlinked-templates/{id} | Get unlinked PA template details by id
*UnlinkedPaTemplatesApi* | [**updateUnlinkedPATemplates**](docs/UnlinkedPaTemplatesApi.md#updateUnlinkedPATemplates) | **PUT** /analytics/engines/pa/v3/unlinked-templates/{id} | Update unlinked PA template


## Documentation for Models

 - [AccountDirectories](docs/AccountDirectories.md)
 - [AccountDirectoriesRoot](docs/AccountDirectoriesRoot.md)
 - [CalculationMeta](docs/CalculationMeta.md)
 - [CalculationStatus](docs/CalculationStatus.md)
 - [CalculationStatusMeta](docs/CalculationStatusMeta.md)
 - [CalculationStatusRoot](docs/CalculationStatusRoot.md)
 - [CalculationUnitStatus](docs/CalculationUnitStatus.md)
 - [CalculationUnitStatusMeta](docs/CalculationUnitStatusMeta.md)
 - [CalculationsSummary](docs/CalculationsSummary.md)
 - [CalculationsSummaryRoot](docs/CalculationsSummaryRoot.md)
 - [ClientErrorResponse](docs/ClientErrorResponse.md)
 - [Column](docs/Column.md)
 - [ColumnRoot](docs/ColumnRoot.md)
 - [ColumnStatistic](docs/ColumnStatistic.md)
 - [ColumnStatisticRoot](docs/ColumnStatisticRoot.md)
 - [ColumnSummary](docs/ColumnSummary.md)
 - [ColumnSummaryRoot](docs/ColumnSummaryRoot.md)
 - [ComponentSummary](docs/ComponentSummary.md)
 - [ComponentSummaryRoot](docs/ComponentSummaryRoot.md)
 - [Currency](docs/Currency.md)
 - [CurrencyRoot](docs/CurrencyRoot.md)
 - [DateParametersSummary](docs/DateParametersSummary.md)
 - [DateParametersSummaryRoot](docs/DateParametersSummaryRoot.md)
 - [DocumentDirectories](docs/DocumentDirectories.md)
 - [DocumentDirectoriesRoot](docs/DocumentDirectoriesRoot.md)
 - [Error](docs/Error.md)
 - [ErrorSource](docs/ErrorSource.md)
 - [Frequency](docs/Frequency.md)
 - [FrequencyRoot](docs/FrequencyRoot.md)
 - [Group](docs/Group.md)
 - [GroupRoot](docs/GroupRoot.md)
 - [LinkedPATemplate](docs/LinkedPATemplate.md)
 - [LinkedPATemplateParameters](docs/LinkedPATemplateParameters.md)
 - [LinkedPATemplateParametersRoot](docs/LinkedPATemplateParametersRoot.md)
 - [LinkedPATemplatePostSummary](docs/LinkedPATemplatePostSummary.md)
 - [LinkedPATemplatePostSummaryRoot](docs/LinkedPATemplatePostSummaryRoot.md)
 - [LinkedPATemplateRoot](docs/LinkedPATemplateRoot.md)
 - [LinkedPATemplateSummary](docs/LinkedPATemplateSummary.md)
 - [LinkedPATemplateSummaryRoot](docs/LinkedPATemplateSummaryRoot.md)
 - [LinkedPATemplateUpdateParameters](docs/LinkedPATemplateUpdateParameters.md)
 - [LinkedPATemplateUpdateParametersRoot](docs/LinkedPATemplateUpdateParametersRoot.md)
 - [Metadata](docs/Metadata.md)
 - [ObjectRoot](docs/ObjectRoot.md)
 - [PACalculationColumn](docs/PACalculationColumn.md)
 - [PACalculationDataSources](docs/PACalculationDataSources.md)
 - [PACalculationGroup](docs/PACalculationGroup.md)
 - [PACalculationParameters](docs/PACalculationParameters.md)
 - [PACalculationParametersRoot](docs/PACalculationParametersRoot.md)
 - [PACalculationPricingSource](docs/PACalculationPricingSource.md)
 - [PACalendar](docs/PACalendar.md)
 - [PACalendarRoot](docs/PACalendarRoot.md)
 - [PACommentary](docs/PACommentary.md)
 - [PACommentaryConfigurationSummary](docs/PACommentaryConfigurationSummary.md)
 - [PACommentaryConfigurationSummaryRoot](docs/PACommentaryConfigurationSummaryRoot.md)
 - [PACommentaryDate](docs/PACommentaryDate.md)
 - [PACommentaryGetStatus](docs/PACommentaryGetStatus.md)
 - [PACommentaryGetStatusRoot](docs/PACommentaryGetStatusRoot.md)
 - [PACommentaryParameters](docs/PACommentaryParameters.md)
 - [PACommentaryParametersRoot](docs/PACommentaryParametersRoot.md)
 - [PACommentaryRoot](docs/PACommentaryRoot.md)
 - [PACommentaryStatus](docs/PACommentaryStatus.md)
 - [PACommentaryStatusRoot](docs/PACommentaryStatusRoot.md)
 - [PAComponent](docs/PAComponent.md)
 - [PAComponentData](docs/PAComponentData.md)
 - [PAComponentRoot](docs/PAComponentRoot.md)
 - [PADateParameters](docs/PADateParameters.md)
 - [PAIdentifier](docs/PAIdentifier.md)
 - [PAPricingSource](docs/PAPricingSource.md)
 - [PAPricingSourceRoot](docs/PAPricingSourceRoot.md)
 - [PaginationInfo](docs/PaginationInfo.md)
 - [PaginationMeta](docs/PaginationMeta.md)
 - [Section](docs/Section.md)
 - [TemplateContentTypes](docs/TemplateContentTypes.md)
 - [TemplatedPAComponent](docs/TemplatedPAComponent.md)
 - [TemplatedPAComponentParameters](docs/TemplatedPAComponentParameters.md)
 - [TemplatedPAComponentParametersRoot](docs/TemplatedPAComponentParametersRoot.md)
 - [TemplatedPAComponentPostSummary](docs/TemplatedPAComponentPostSummary.md)
 - [TemplatedPAComponentPostSummaryRoot](docs/TemplatedPAComponentPostSummaryRoot.md)
 - [TemplatedPAComponentRoot](docs/TemplatedPAComponentRoot.md)
 - [TemplatedPAComponentSummary](docs/TemplatedPAComponentSummary.md)
 - [TemplatedPAComponentSummaryRoot](docs/TemplatedPAComponentSummaryRoot.md)
 - [TemplatedPAComponentUpdateParameters](docs/TemplatedPAComponentUpdateParameters.md)
 - [TemplatedPAComponentUpdateParametersRoot](docs/TemplatedPAComponentUpdateParametersRoot.md)
 - [UnlinkedPATemplate](docs/UnlinkedPATemplate.md)
 - [UnlinkedPATemplateCategoryAndType](docs/UnlinkedPATemplateCategoryAndType.md)
 - [UnlinkedPATemplateCategoryAndTypeDetails](docs/UnlinkedPATemplateCategoryAndTypeDetails.md)
 - [UnlinkedPATemplateCategoryAndTypeDetailsRoot](docs/UnlinkedPATemplateCategoryAndTypeDetailsRoot.md)
 - [UnlinkedPATemplateCategoryAndTypeRoot](docs/UnlinkedPATemplateCategoryAndTypeRoot.md)
 - [UnlinkedPATemplateColumnDetails](docs/UnlinkedPATemplateColumnDetails.md)
 - [UnlinkedPATemplateGroupDetails](docs/UnlinkedPATemplateGroupDetails.md)
 - [UnlinkedPATemplateParameters](docs/UnlinkedPATemplateParameters.md)
 - [UnlinkedPATemplateParametersRoot](docs/UnlinkedPATemplateParametersRoot.md)
 - [UnlinkedPATemplatePostSummary](docs/UnlinkedPATemplatePostSummary.md)
 - [UnlinkedPATemplatePostSummaryRoot](docs/UnlinkedPATemplatePostSummaryRoot.md)
 - [UnlinkedPATemplateRoot](docs/UnlinkedPATemplateRoot.md)
 - [UnlinkedPATemplateSummary](docs/UnlinkedPATemplateSummary.md)
 - [UnlinkedPATemplateSummaryRoot](docs/UnlinkedPATemplateSummaryRoot.md)
 - [UnlinkedPATemplateUpdateParameters](docs/UnlinkedPATemplateUpdateParameters.md)
 - [UnlinkedPATemplateUpdateParametersRoot](docs/UnlinkedPATemplateUpdateParametersRoot.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
